src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__loop_with_break.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Loop {
                                    label: None,
                                    body: Block {
                                        statements: [],
                                        expr: Some(
                                            Expr {
                                                kind: If {
                                                    condition: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 2,
                                                                            },
                                                                            span: Span {
                                                                                start: 19,
                                                                                end: 23,
                                                                                start_line: 1,
                                                                                start_col: 20,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 19,
                                                                    end: 23,
                                                                    start_line: 1,
                                                                    start_col: 20,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 19,
                                                            end: 23,
                                                            start_line: 1,
                                                            start_col: 20,
                                                        },
                                                    },
                                                    then_branch: Block {
                                                        statements: [],
                                                        expr: Some(
                                                            Expr {
                                                                kind: Break {
                                                                    label: None,
                                                                    value: Some(
                                                                        Expr {
                                                                            kind: Literal(
                                                                                Literal {
                                                                                    kind: Int {
                                                                                        value: 42,
                                                                                        suffix: None,
                                                                                    },
                                                                                    span: Span {
                                                                                        start: 32,
                                                                                        end: 34,
                                                                                        start_line: 1,
                                                                                        start_col: 33,
                                                                                    },
                                                                                },
                                                                            ),
                                                                            span: Span {
                                                                                start: 32,
                                                                                end: 34,
                                                                                start_line: 1,
                                                                                start_col: 33,
                                                                            },
                                                                        },
                                                                    ),
                                                                },
                                                                span: Span {
                                                                    start: 26,
                                                                    end: 34,
                                                                    start_line: 1,
                                                                    start_col: 27,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 24,
                                                            end: 36,
                                                            start_line: 1,
                                                            start_col: 25,
                                                        },
                                                    },
                                                    else_branch: None,
                                                },
                                                span: Span {
                                                    start: 16,
                                                    end: 36,
                                                    start_line: 1,
                                                    start_col: 17,
                                                },
                                            },
                                        ),
                                        span: Span {
                                            start: 14,
                                            end: 38,
                                            start_line: 1,
                                            start_col: 15,
                                        },
                                    },
                                },
                                span: Span {
                                    start: 9,
                                    end: 38,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 40,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 40,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 40,
        start_line: 1,
        start_col: 1,
    },
}
