src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__method_chain.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_fiber: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: MethodCall {
                                    receiver: Expr {
                                        kind: MethodCall {
                                            receiver: Expr {
                                                kind: MethodCall {
                                                    receiver: Expr {
                                                        kind: Path(
                                                            ExprPath {
                                                                segments: [
                                                                    ExprPathSegment {
                                                                        name: Spanned {
                                                                            node: SymbolU32 {
                                                                                value: 2,
                                                                            },
                                                                            span: Span {
                                                                                start: 9,
                                                                                end: 10,
                                                                                start_line: 1,
                                                                                start_col: 10,
                                                                            },
                                                                        },
                                                                        args: None,
                                                                    },
                                                                ],
                                                                span: Span {
                                                                    start: 9,
                                                                    end: 10,
                                                                    start_line: 1,
                                                                    start_col: 10,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 9,
                                                            end: 10,
                                                            start_line: 1,
                                                            start_col: 10,
                                                        },
                                                    },
                                                    method: Spanned {
                                                        node: SymbolU32 {
                                                            value: 3,
                                                        },
                                                        span: Span {
                                                            start: 11,
                                                            end: 14,
                                                            start_line: 1,
                                                            start_col: 12,
                                                        },
                                                    },
                                                    type_args: None,
                                                    args: [],
                                                },
                                                span: Span {
                                                    start: 9,
                                                    end: 16,
                                                    start_line: 1,
                                                    start_col: 10,
                                                },
                                            },
                                            method: Spanned {
                                                node: SymbolU32 {
                                                    value: 4,
                                                },
                                                span: Span {
                                                    start: 17,
                                                    end: 20,
                                                    start_line: 1,
                                                    start_col: 18,
                                                },
                                            },
                                            type_args: None,
                                            args: [
                                                CallArg {
                                                    name: None,
                                                    value: Expr {
                                                        kind: Literal(
                                                            Literal {
                                                                kind: Int {
                                                                    value: 1,
                                                                    suffix: None,
                                                                },
                                                                span: Span {
                                                                    start: 21,
                                                                    end: 22,
                                                                    start_line: 1,
                                                                    start_col: 22,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 21,
                                                            end: 22,
                                                            start_line: 1,
                                                            start_col: 22,
                                                        },
                                                    },
                                                    span: Span {
                                                        start: 21,
                                                        end: 22,
                                                        start_line: 1,
                                                        start_col: 22,
                                                    },
                                                },
                                                CallArg {
                                                    name: None,
                                                    value: Expr {
                                                        kind: Literal(
                                                            Literal {
                                                                kind: Int {
                                                                    value: 2,
                                                                    suffix: None,
                                                                },
                                                                span: Span {
                                                                    start: 24,
                                                                    end: 25,
                                                                    start_line: 1,
                                                                    start_col: 25,
                                                                },
                                                            },
                                                        ),
                                                        span: Span {
                                                            start: 24,
                                                            end: 25,
                                                            start_line: 1,
                                                            start_col: 25,
                                                        },
                                                    },
                                                    span: Span {
                                                        start: 24,
                                                        end: 25,
                                                        start_line: 1,
                                                        start_col: 25,
                                                    },
                                                },
                                            ],
                                        },
                                        span: Span {
                                            start: 9,
                                            end: 26,
                                            start_line: 1,
                                            start_col: 10,
                                        },
                                    },
                                    method: Spanned {
                                        node: SymbolU32 {
                                            value: 5,
                                        },
                                        span: Span {
                                            start: 27,
                                            end: 30,
                                            start_line: 1,
                                            start_col: 28,
                                        },
                                    },
                                    type_args: None,
                                    args: [],
                                },
                                span: Span {
                                    start: 9,
                                    end: 32,
                                    start_line: 1,
                                    start_col: 10,
                                },
                            },
                        ),
                        span: Span {
                            start: 7,
                            end: 34,
                            start_line: 1,
                            start_col: 8,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 34,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 34,
        start_line: 1,
        start_col: 1,
    },
}
